--- a/src/module.css
+++ b/src/module.css
@@ -5,3 +5,6 @@
 #navbar_title {
     font-size: 30px;
 }
+#body {
+    background-image: url('https: //encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKbTy1qxoUjj3vjbxbNP_fUNr8BKZ6JIKH4A&usqp=CAU');
+}
